# configbundle

./: .gitignore  Makefile  README.md  cb  cbundle  pyproject.toml
cbundle/: cli.py
tests/: test_cb.py
