[tool.poetry]
name = "cbundle"
version = "0.1.0"
description = "Organize configuration files in link bundles"
authors = ["Jörg Volbers <joerg@joergvolbers.de>"]
license = "GPL"
readme = "README.md"

[tool.poetry.scripts]
cbundle="cbundle.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
